# cyberpunk

./: .gitignore  CMakeLists.txt  makefile
src/: main.cpp
src/actions/: action.cpp  action.h
src/character/: ability.cpp  ability.h  character.cpp  character.h  characterClass.cpp  characterClass.h  stat.cpp  stat.h
src/character/appearance/: affectations.cpp  affectations.h  clothes.cpp  clothes.h  hairstyle.cpp  hairstyle.h  race.cpp  race.h
src/character/backstory/: backstory.cpp  backstory.h  motivation.cpp  motivation.h  relatedPerson.cpp  relatedPerson.h
src/dice/: dice.cpp  dice.h
